--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -16,3 +15,4 @@
 ###< symfony/phpunit-bridge ###
 
 /node_modules
+/composer.lock
