--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,16 @@
 {
     "type": "project",
     "license": "proprietary",
+    "minimum-stability": "dev",
     "require": {
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
-        "sonata-project/admin-bundle": "4.x-dev as 3.7",
-        "sonata-project/core-bundle": "3.x-dev as 3.19",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        "sonata-project/admin-bundle": "dev-master as 4.0",
+        "sonata-project/block-bundle": "4.x-dev",
+        "sonata-project/core-bundle": "4.x-dev",
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master as 4.0",
         "sonata-project/form-extensions": "0.x-dev as 0.2",
         "sonata-project/twig-extensions": "0.x-dev as 0.2",
         "sonata-project/user-bundle": "^4.0",
@@ -92,6 +94,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/wbloszyk/SonataAdminBundle.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/wbloszyk/SonataBlockBundle.git"
         },
         {
             "type": "vcs",
