--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "dev-master as 4.0",
         "sonata-project/block-bundle": "4.x-dev",
-        "sonata-project/core-bundle": "4.x-dev",
+        "sonata-project/core-bundle": "^3.20",
         "sonata-project/doctrine-orm-admin-bundle": "dev-master as 4.0",
         "sonata-project/form-extensions": "0.x-dev as 0.2",
         "sonata-project/twig-extensions": "0.x-dev as 0.2",
